--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "small api for everyday ramos app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,6 @@
     "body-parser": "^1.15.2",
     "cloudinary": "^1.5.0",
     "express": "^4.14.0",
-    "mongoose": "^4.7.6"
+    "mongoose": "^4.7.6",
   }
 }
